# setup-cpp

./: .dockerignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmignore  .npmrc  .prettierignore  .terserrc.cjs  .terserrc.js  .terserrc.mjs  CMakeLists.txt  CONTRIBUTING.md  LICENSE.dependencies.txt  LICENSE.txt  README.md  README_DOCKER.md  action.yml  babel.config.cts  babel.config.mts  biome.jsonc  cspell.config.yaml  dprint.json  ignored-error-codes.json  jest.config.js  jest.config.mjs  jest.config.ts  lefthook.yml  loosely-type-checked-files.json  package-version.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  swc.legacy.json  swc.modern.json  tsconfig.json  tsconfig.types.json  turbo.json  vite.config.mts  (+1 more)
.github/: renovate.json
.github/workflows/: CI.yml
building/: pack-exe.js
building/docker/: debian.dockerfile  debian_node.dockerfile  debian_node_slim.dockerfile  linux.dockerfile  node.docker  ubuntu.dockerfile  ubuntu_node.dockerfile  ubuntu_stable_node.dockerfile
building/scripts/: debug_remove.js
cmake/: x86_64-w64-mingw32-toolchain.cmake
dev/container-tests/: arch.mingw.yml  arch.yml  fedora.mingw.yml  ubuntu.mingw.yml  (+2 more)
patches/: @actions__http-client.patch  @actions__http-client@2.2.1.patch  @actions__http-client@2.2.3.patch  apply.mts
src/: actions-input.ts  asset-list.ts  check-updates.ts  cli-deps.ts  cli-options.ts  compilers.ts  default_versions.ts  installTool.ts  lib.ts  main.ts  options.ts  setup-cpp-installer.ts  setup-cpp.ts  setup-options.ts  tool.ts  tsconfig.json  types.d.ts
(+251 files in other folders)
